# PsyClientManager

./: .gitignore  .gitmodules  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  sonar-project.properties  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  pages.yml
docs/asciidoc/: 01-overview.adoc  02-build-run.adoc  03-architecture.adoc  04-ui-layout.adoc  05-modules.adoc  06-database-and-data-model.adoc  07-testing.adoc  08-recursive-model-migration.adoc  09-recurring-events.adoc  index.adoc
docs/site/: index.html
packaging/: PsyClientManager.desktop  PsyClientManager.iss
packaging/windows/: app_icon.rc.in
patches/qlementine/: 0001-guard-widget-animation-manager-on-destroy.patch
resources/: themes.qrc
resources/themes/: qlementine_dark.json
scripts/: apply_qlementine_patch.cmake  apply_qlementine_patch.sh
src/: main.cpp
src/app/: CMakeLists.txt  app.cpp  app.cppm  app.h  application.cpp  application.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h
src/client_model/: CMakeLists.txt  clientdelegate.cpp  clientdelegate.h  clientmodel.cpp  clientmodel.h  constants.hpp  qclient_delegate.cpp  qclient_delegate.h  qclient_model.cpp  qclient_model.h
src/config/: CMakeLists.txt  config.cpp  config.cppm  config.h  rfl_path.cppm  rfl_path.hpp
src/database/: CMakeLists.txt  constance.cppm  constance.hpp  constants.hpp  database.cpp  database.cppm  database.h  datetime.hpp  db_utils.hpp  objectbox-model.h  objectbox-model.json  schema.hpp  scheme.fbs  scheme.obx.cpp  scheme.obx.hpp  slint_adapter.cppm
src/event_data_manager/: CMakeLists.txt  eventdatamanager.cpp  eventdatamanager.h  qevent_data_manager.cpp  qevent_data_manager.h
src/event_model_view/: CMakeLists.txt  eventitem.cpp  eventitem.h  eventview.cpp  eventview.h  timelinewidget.cpp  timelinewidget.h
src/event_view/: CMakeLists.txt  constants.hpp  event_item.cpp  event_item.h  event_view.cpp  event_view.h  eventitem.cpp  eventitem.h  eventview.cpp  eventview.h  qobxevent.cpp  qobxevent.h  qtimeline_model.cpp  qtimeline_model.h  recurrence_utils.cpp  recurrence_utils.h
src/logic/: CMakeLists.txt  logic.cppm
src/pages/analytics_page/: CMakeLists.txt  analytics_page.cpp  analytics_page.h
src/pages/client_info_page/: CMakeLists.txt  client_info.cpp  client_info.h  clientinfo.cpp  clientinfo.h  clientmodel.cpp  clientmodel.h
src/pages/client_notes_page/: CMakeLists.txt  client_notes_page.cpp  client_notes_page.h
src/pages/detail_client_info_page/: CMakeLists.txt  client_charts_widget.cpp  client_charts_widget.h  client_info_card.cpp  client_info_card.h  clientinfocard.cpp  qclient.cpp  qclient.h
src/pages/event_info_page/: CMakeLists.txt  event_info.cpp  event_info.h  eventinfo.cpp  eventinfo.h  qevent_details_widget.cpp  qevent_details_widget.h
src/timeline_widget/: CMakeLists.txt  timeline_widget.cpp  timeline_widget.h  timelinewidget.cpp  timelinewidget.h
src/widgets/: CMakeLists.txt  app_settings.cpp  app_settings.h  calendar.cppm  calendar_widget_logic.cppm  constants.hpp  meeting_utils.cpp  meeting_utils.h  quick_slots_widget.cpp  quick_slots_widget.h  rounded_calendar_widget.cpp  rounded_calendar_widget.h  tab_button.cpp  tab_button.h
test/: CMakeLists.txt  config_tests.cpp  database_tests.cpp
translation/: app_en.qm  app_en.ts  app_ru.qm  app_ru.ts
ui/: mainwindow.slint
ui/app/: mainwindow.slint  mainwindow.ui
ui/logic/: logic.slint
ui/pages/: client_info.slint  clientinfo.ui  detailclientinfo.ui  eventdetails.ui  eventinfo.ui
ui/widgets/: calendar.slint
